@@ -14,7 +14,6 @@ import java.math.RoundingMode;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -92,7 +91,7 @@ public class FeesService {
         return Arrays.stream(feeRanges)
             .sorted(Comparator.comparing(Fee2Dto::getMinRange, Comparator.nullsFirst(Comparator.naturalOrder())))
             .filter(e -> e.getMinRange() != null)
-            .collect(Collectors.toList());
+            .toList();
     }
 
 }
