@@ -34,7 +34,6 @@ import uk.gov.hmcts.reform.idam.client.models.UserInfo;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import static java.time.LocalDate.now;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -221,7 +220,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .fromDate(LocalDate.of(2020, 5, 2))
                 .toDate(LocalDate.of(2020, 6, 2))
                 .build()
-        ).collect(Collectors.toList());
+        ).toList();
 
         List<UnavailableDate> expectedNewDatesFromUnavailableDatesEvent = Stream.of(
             UnavailableDate.builder()
@@ -237,7 +236,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                 .dateAdded(issueDate)
                 .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                 .build()
-        ).collect(Collectors.toList());
+        ).toList();
 
         @BeforeEach
         void setup() {
@@ -298,7 +297,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .unavailableDateType(UnavailableDateType.SINGLE_DATE)
                             .date(LocalDate.of(2022, 5, 2))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -320,7 +319,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimantFullDefence()
@@ -355,7 +354,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .unavailableDateType(UnavailableDateType.SINGLE_DATE)
                             .date(LocalDate.of(2022, 5, 2))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -377,7 +376,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimantFullDefence()
@@ -417,7 +416,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .fromDate(LocalDate.of(2023, 8, 20))
                             .toDate(LocalDate.of(2023, 8, 22))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -446,7 +445,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimDetailsNotified()
@@ -484,7 +483,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -512,7 +511,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimantFullDefence()
@@ -656,7 +655,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .unavailableDateType(UnavailableDateType.SINGLE_DATE)
                             .date(LocalDate.of(2022, 5, 2))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -678,7 +677,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimantFullDefence()
@@ -758,7 +757,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .unavailableDateType(UnavailableDateType.SINGLE_DATE)
                             .date(LocalDate.of(2022, 5, 2))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -780,7 +779,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimantFullDefence()
@@ -828,7 +827,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .fromDate(LocalDate.of(2023, 8, 20))
                             .toDate(LocalDate.of(2023, 8, 22))
                             .build()
-                    ).map(ElementUtils::element).collect(Collectors.toList());
+                    ).map(ElementUtils::element).toList();
 
                     List<UnavailableDate> expectedDates = Stream.of(
                         UnavailableDate.builder()
@@ -857,7 +856,7 @@ class AddUnavailableDatesCallbackHandlerTest extends BaseCallbackHandlerTest {
                             .dateAdded(issueDate)
                             .eventAdded(ADD_UNAVAILABLE_DATES_EVENT)
                             .build()
-                    ).collect(Collectors.toList());
+                    ).toList();
 
                     CaseData caseData = CaseDataBuilder.builder()
                         .atStateClaimDetailsNotified()
