@@ -28,7 +28,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Random;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -257,7 +256,7 @@ class GeneralAppFeesServiceTest {
         @Test
         void default_types_with_notice_should_pay_275() {
             List<GeneralApplicationTypes> allTypes =
-                    Stream.of(GeneralApplicationTypes.values()).collect(Collectors.toList());
+                    Stream.of(GeneralApplicationTypes.values()).toList();
             allTypes.removeAll(GeneralAppFeesService.VARY_TYPES);
             allTypes.removeAll(GeneralAppFeesService.SET_ASIDE);
             allTypes.removeAll(GeneralAppFeesService.ADJOURN_TYPES);
@@ -279,7 +278,7 @@ class GeneralAppFeesServiceTest {
         @Test
         void default_types_with_notice_should_pay_275_forGALiP() {
             List<GeneralApplicationTypes> allTypes =
-                Stream.of(GeneralApplicationTypes.values()).collect(Collectors.toList());
+                Stream.of(GeneralApplicationTypes.values()).toList();
             allTypes.removeAll(GeneralAppFeesService.VARY_TYPES);
             allTypes.removeAll(GeneralAppFeesService.SET_ASIDE);
             allTypes.removeAll(GeneralAppFeesService.ADJOURN_TYPES);
@@ -297,7 +296,7 @@ class GeneralAppFeesServiceTest {
         @Test
         void default_types_without_notice_should_pay_108() {
             List<GeneralApplicationTypes> allTypes =
-                    Stream.of(GeneralApplicationTypes.values()).collect(Collectors.toList());
+                    Stream.of(GeneralApplicationTypes.values()).toList();
             allTypes.removeAll(GeneralAppFeesService.VARY_TYPES);
             allTypes.removeAll(GeneralAppFeesService.SET_ASIDE);
             allTypes.removeAll(GeneralAppFeesService.ADJOURN_TYPES);
@@ -319,7 +318,7 @@ class GeneralAppFeesServiceTest {
         @Test
         void default_types_without_notice_should_pay_108_forGALiP() {
             List<GeneralApplicationTypes> allTypes =
-                Stream.of(GeneralApplicationTypes.values()).collect(Collectors.toList());
+                Stream.of(GeneralApplicationTypes.values()).toList();
             allTypes.removeAll(GeneralAppFeesService.VARY_TYPES);
             allTypes.removeAll(GeneralAppFeesService.SET_ASIDE);
             allTypes.removeAll(GeneralAppFeesService.ADJOURN_TYPES);
@@ -447,7 +446,7 @@ class GeneralAppFeesServiceTest {
 
         private List<GeneralApplicationTypes> getRandomDefaultTypes() {
             List<GeneralApplicationTypes> allTypes =
-                    Stream.of(GeneralApplicationTypes.values()).collect(Collectors.toList());
+                    Stream.of(GeneralApplicationTypes.values()).toList();
             allTypes.removeAll(GeneralAppFeesService.VARY_TYPES);
             allTypes.removeAll(GeneralAppFeesService.SET_ASIDE);
             allTypes.removeAll(GeneralAppFeesService.ADJOURN_TYPES);
